// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with "sourceMap" option should work and emit warning on valid sourcemap and minimizer error: errors 1`] = `
Array [
  "Error: broken-source-map.css from Css Minimizer Webpack Plugin
error-plugin: /broken-source-map.css:1:7: Postcss error [test:1,5][broken-source-map.css:1,7]",
  "ModuleBuildError: Module build failed (from ../../node_modules/mini-css-extract-plugin/dist/loader.js):
Error: broken-source-map.css from Css Minimizer Webpack Plugin",
]
`;

exports[`when applied with "sourceMap" option should work and emit warning on valid sourcemap and minimizer error: warnings 1`] = `Array []`;

exports[`when applied with "sourceMap" option should work and emit warnings on broken sourcemaps: errors 1`] = `
Array [
  "Error: broken-source-map.css from Css Minimizer
Error: \\"version\\" is a required argument.",
  "ModuleBuildError: Module build failed (from ../../node_modules/mini-css-extract-plugin/dist/loader.js):
Error: broken-source-map.css from Css Minimizer",
]
`;

exports[`when applied with "sourceMap" option should work and emit warnings on broken sourcemaps: warnings 1`] = `
Array [
  "Error: broken-source-map.css contains invalid source map",
]
`;

exports[`when applied with "sourceMap" option should work with SourceMapDevToolPlugin plugin): assets 1`] = `
Object {
  "dist/entry.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=https://example.com/project/sourcemaps/entry.css.map*/",
  "dist/entry2.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=https://example.com/project/sourcemaps/entry2.css.map*/",
  "sourcemaps/entry.css.map": {
    "version": 3,
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.scss"
    ],
    "names": [],
    "mappings": "AAAA,KCGE,UDFA,eCCF,CAEE,OACE,iBAIJ",
    "file": "dist/entry.css",
    "sourcesContent": [
        "body {\\n  font-weight: bold;\\n}",
        "@import 'bar';\\n\\nbody {\\n  color: red;\\n  a {\\n    text-align: center;\\n  }\\n}"
    ],
    "sourceRoot": ""
},
  "sourcemaps/entry2.css.map": {
    "version": 3,
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.css"
    ],
    "names": [],
    "mappings": "AAAA,KCGE,UDFA,eCCF,CAIA,OACE,iBAGF",
    "file": "dist/entry2.css",
    "sourcesContent": [
        "body {\\n  font-weight: bold;\\n}",
        "@import 'bar';\\n\\nbody {\\n  color: red;\\n}\\n\\nbody a {\\n  text-align: center;\\n}"
    ],
    "sourceRoot": ""
},
}
`;

exports[`when applied with "sourceMap" option should work with SourceMapDevToolPlugin plugin): errors 1`] = `Array []`;

exports[`when applied with "sourceMap" option should work with SourceMapDevToolPlugin plugin): warnings 1`] = `Array []`;

exports[`when applied with "sourceMap" option should work with the "devtool" option and the "parallel" option with "false" value: assets 1`] = `
Object {
  "entry.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=entry.css.map*/",
  "entry.css.map": {
    "version": 3,
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.scss"
    ],
    "names": [],
    "mappings": "AAAA,KCGE,UDFA,eCCF,CAEE,OACE,iBAIJ",
    "file": "entry.css",
    "sourcesContent": [
        "body {\\n  font-weight: bold;\\n}",
        "@import 'bar';\\n\\nbody {\\n  color: red;\\n  a {\\n    text-align: center;\\n  }\\n}"
    ],
    "sourceRoot": ""
},
  "entry2.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=entry2.css.map*/",
  "entry2.css.map": {
    "version": 3,
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.css"
    ],
    "names": [],
    "mappings": "AAAA,KCGE,UDFA,eCCF,CAIA,OACE,iBAGF",
    "file": "entry2.css",
    "sourcesContent": [
        "body {\\n  font-weight: bold;\\n}",
        "@import 'bar';\\n\\nbody {\\n  color: red;\\n}\\n\\nbody a {\\n  text-align: center;\\n}"
    ],
    "sourceRoot": ""
},
}
`;

exports[`when applied with "sourceMap" option should work with the "devtool" option and the "parallel" option with "false" value: errors 1`] = `Array []`;

exports[`when applied with "sourceMap" option should work with the "devtool" option and the "parallel" option with "false" value: warnings 1`] = `Array []`;

exports[`when applied with "sourceMap" option should work with the "devtool" option and the "parallel" option with "true" value: assets 1`] = `
Object {
  "entry.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=entry.css.map*/",
  "entry.css.map": {
    "version": 3,
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.scss"
    ],
    "names": [],
    "mappings": "AAAA,KCGE,UDFA,eCCF,CAEE,OACE,iBAIJ",
    "file": "entry.css",
    "sourcesContent": [
        "body {\\n  font-weight: bold;\\n}",
        "@import 'bar';\\n\\nbody {\\n  color: red;\\n  a {\\n    text-align: center;\\n  }\\n}"
    ],
    "sourceRoot": ""
},
  "entry2.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=entry2.css.map*/",
  "entry2.css.map": {
    "version": 3,
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.css"
    ],
    "names": [],
    "mappings": "AAAA,KCGE,UDFA,eCCF,CAIA,OACE,iBAGF",
    "file": "entry2.css",
    "sourcesContent": [
        "body {\\n  font-weight: bold;\\n}",
        "@import 'bar';\\n\\nbody {\\n  color: red;\\n}\\n\\nbody a {\\n  text-align: center;\\n}"
    ],
    "sourceRoot": ""
},
}
`;

exports[`when applied with "sourceMap" option should work with the "devtool" option and the "parallel" option with "true" value: errors 1`] = `Array []`;

exports[`when applied with "sourceMap" option should work with the "devtool" option and the "parallel" option with "true" value: warnings 1`] = `Array []`;

exports[`when applied with "sourceMap" option should work with the "devtool" option: assets 1`] = `
Object {
  "entry.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=entry.css.map*/",
  "entry.css.map": {
    "version": 3,
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.scss"
    ],
    "names": [],
    "mappings": "AAAA,KCGE,UDFA,eCCF,CAEE,OACE,iBAIJ",
    "file": "entry.css",
    "sourcesContent": [
        "body {\\n  font-weight: bold;\\n}",
        "@import 'bar';\\n\\nbody {\\n  color: red;\\n  a {\\n    text-align: center;\\n  }\\n}"
    ],
    "sourceRoot": ""
},
  "entry2.css": "body{color:red;font-weight:700}body a{text-align:center}
/*# sourceMappingURL=entry2.css.map*/",
  "entry2.css.map": {
    "version": 3,
    "sources": [
        "webpack:///./sourcemap/bar.scss",
        "webpack:///./sourcemap/foo.css"
    ],
    "names": [],
    "mappings": "AAAA,KCGE,UDFA,eCCF,CAIA,OACE,iBAGF",
    "file": "entry2.css",
    "sourcesContent": [
        "body {\\n  font-weight: bold;\\n}",
        "@import 'bar';\\n\\nbody {\\n  color: red;\\n}\\n\\nbody a {\\n  text-align: center;\\n}"
    ],
    "sourceRoot": ""
},
}
`;

exports[`when applied with "sourceMap" option should work with the "devtool" option: errors 1`] = `Array []`;

exports[`when applied with "sourceMap" option should work with the "devtool" option: warnings 1`] = `Array []`;
